{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 522,
  "lineage": "1daf5493-8785-36c5-c1be-e5313988f0d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004de3dfcd6dd8645",
            "arn": "arn:aws:ec2:us-east-1:515275664907:elastic-ip/eipalloc-004de3dfcd6dd8645",
            "association_id": "eipassoc-043c0951b179689b8",
            "domain": "vpc",
            "id": "eipalloc-004de3dfcd6dd8645",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04f9dbe398721e139",
            "private_dns": "ip-10-0-1-205.ec2.internal",
            "private_ip": "10.0.1.205",
            "public_dns": "ec2-54-86-46-97.compute-1.amazonaws.com",
            "public_ip": "54.86.46.97",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "main-nat-eip_a"
            },
            "tags_all": {
              "Name": "main-nat-eip_a"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015eae1fa80607897",
            "arn": "arn:aws:ec2:us-east-1:515275664907:elastic-ip/eipalloc-015eae1fa80607897",
            "association_id": "eipassoc-0229f606901477d95",
            "domain": "vpc",
            "id": "eipalloc-015eae1fa80607897",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07ce116b4c56afd93",
            "private_dns": "ip-10-0-2-111.ec2.internal",
            "private_ip": "10.0.2.111",
            "public_dns": "ec2-3-86-19-16.compute-1.amazonaws.com",
            "public_ip": "3.86.19.16",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "main-nat-eip_b"
            },
            "tags_all": {
              "Name": "main-nat-eip_b"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:internet-gateway/igw-07cd5cb066155858c",
            "id": "igw-07cd5cb066155858c",
            "owner_id": "515275664907",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-igw"
            },
            "tags_all": {
              "Name": "my-vpc-igw"
            },
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:loadbalancer/app/app-internal-alb/97e1b1606949cd60",
            "arn_suffix": "app/app-internal-alb/97e1b1606949cd60",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-app-internal-alb-583259105.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:loadbalancer/app/app-internal-alb/97e1b1606949cd60",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-internal-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c10c1b2741b4193a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009f901160a01318d"
              },
              {
                "subnet_id": "subnet-058e4fd30e6017dcb"
              },
              {
                "subnet_id": "subnet-0bd4b2ad5693d274d"
              }
            ],
            "subnets": [
              "subnet-009f901160a01318d",
              "subnet-058e4fd30e6017dcb",
              "subnet-0bd4b2ad5693d274d"
            ],
            "vpc_id": "vpc-06808daeb6db5b040",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:loadbalancer/app/app-internal-alb/97e1b1606949cd60"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.private_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "application/json",
                    "message_body": "{\"error\":\"Bad Request\"}",
                    "status_code": "400"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:loadbalancer/app/app-internal-alb/97e1b1606949cd60",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b"
          },
          "dependencies": [
            "aws_lb.internal",
            "aws_security_group.alb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.private_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "host_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Administrator",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Administrator/55342bd487472f6b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/ab9bcdfb914e3c38",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "administrator.internal.local"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/ab9bcdfb914e3c38",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b",
            "priority": 30,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/ab9bcdfb914e3c38"
          },
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.http",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.private_c",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Requestor",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Requestor/2eb1821befb27677",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/834583a6a9032884",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "requestor.internal.local"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/834583a6a9032884",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/834583a6a9032884"
          },
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.http",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.private_c",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Worker",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Worker/7326440b6061e9d8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/e67f236fa4e8b9ca",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "worker.internal.local"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/e67f236fa4e8b9ca",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b",
            "priority": 20,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:listener-rule/app/app-internal-alb/97e1b1606949cd60/519ed13d0716897b/e67f236fa4e8b9ca"
          },
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.http",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.private_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Administrator",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Administrator/55342bd487472f6b",
            "arn_suffix": "targetgroup/tg-Administrator/55342bd487472f6b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Administrator/55342bd487472f6b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:515275664907:loadbalancer/app/app-internal-alb/97e1b1606949cd60"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-Administrator",
            "port": 7070,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Administrator/55342bd487472f6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "Requestor",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Requestor/2eb1821befb27677",
            "arn_suffix": "targetgroup/tg-Requestor/2eb1821befb27677",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Requestor/2eb1821befb27677",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:515275664907:loadbalancer/app/app-internal-alb/97e1b1606949cd60"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-Requestor",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Requestor/2eb1821befb27677"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "Worker",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Worker/7326440b6061e9d8",
            "arn_suffix": "targetgroup/tg-Worker/7326440b6061e9d8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Worker/7326440b6061e9d8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:515275664907:loadbalancer/app/app-internal-alb/97e1b1606949cd60"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-Worker",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515275664907:targetgroup/tg-Worker/7326440b6061e9d8"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004de3dfcd6dd8645",
            "association_id": "eipassoc-043c0951b179689b8",
            "connectivity_type": "public",
            "id": "nat-0e3ebbe06016b8fa8",
            "network_interface_id": "eni-04f9dbe398721e139",
            "private_ip": "10.0.1.205",
            "public_ip": "54.86.46.97",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01fce6088d8ee29a9",
            "tags": {
              "Name": "main-natgw_a"
            },
            "tags_all": {
              "Name": "main-natgw_a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.gw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015eae1fa80607897",
            "association_id": "eipassoc-0229f606901477d95",
            "connectivity_type": "public",
            "id": "nat-0c4c0918b607e196c",
            "network_interface_id": "eni-07ce116b4c56afd93",
            "private_ip": "10.0.2.111",
            "public_ip": "3.86.19.16",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6fe1c176e37bba3",
            "tags": {
              "Name": "main-natgw_b"
            },
            "tags_all": {
              "Name": "main-natgw_b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.gw",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:route-table/rtb-0d7c431377a7f9200",
            "id": "rtb-0d7c431377a7f9200",
            "owner_id": "515275664907",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3ebbe06016b8fa8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-a-rt"
            },
            "tags_all": {
              "Name": "main-private-a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "rtb-0d7c431377a7f9200",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:route-table/rtb-0337c6f0b8505c14d",
            "id": "rtb-0337c6f0b8505c14d",
            "owner_id": "515275664907",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c4c0918b607e196c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-b-rt"
            },
            "tags_all": {
              "Name": "main-private-b-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "rtb-0337c6f0b8505c14d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:route-table/rtb-0f35b655828618829",
            "id": "rtb-0f35b655828618829",
            "owner_id": "515275664907",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cd5cb066155858c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-vpc-igw-rt_a"
            },
            "tags_all": {
              "Name": "my-public-vpc-igw-rt_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "rtb-0f35b655828618829",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:route-table/rtb-037b3126789dc47ce",
            "id": "rtb-037b3126789dc47ce",
            "owner_id": "515275664907",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cd5cb066155858c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-vpc-igw-rt_b"
            },
            "tags_all": {
              "Name": "my-public-vpc-igw-rt_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "rtb-037b3126789dc47ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1c4c4aa905149e7",
            "region": "us-east-1",
            "route_table_id": "rtb-0d7c431377a7f9200",
            "subnet_id": "subnet-009f901160a01318d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw_a",
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e06fa20b30b0dda8",
            "region": "us-east-1",
            "route_table_id": "rtb-0337c6f0b8505c14d",
            "subnet_id": "subnet-058e4fd30e6017dcb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw_b",
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056e73963dc6da3c0",
            "region": "us-east-1",
            "route_table_id": "rtb-0337c6f0b8505c14d",
            "subnet_id": "subnet-0bd4b2ad5693d274d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw_b",
            "aws_route_table.private_b",
            "aws_subnet.private_c",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e2c7c64e9308890",
            "region": "us-east-1",
            "route_table_id": "rtb-0f35b655828618829",
            "subnet_id": "subnet-01fce6088d8ee29a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b021106df08e4fe",
            "region": "us-east-1",
            "route_table_id": "rtb-037b3126789dc47ce",
            "subnet_id": "subnet-0b6fe1c176e37bba3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group/sg-0c10c1b2741b4193a",
            "description": "Internal-ALB-SG",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "ALB-to-ECS-Administrator-over-HTTP",
                "from_port": 7070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01bfc2ee35e050465"
                ],
                "self": false,
                "to_port": 7070
              },
              {
                "cidr_blocks": [],
                "description": "ALB-to-ECS-Requestor-over-HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01bfc2ee35e050465"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ALB-to-ECS-Worker-over-HTTP",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01bfc2ee35e050465"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "id": "sg-0c10c1b2741b4193a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API-GW-VPC-Link-to-ALB-(HTTP)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ab405a02826a65f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "515275664907",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sg-0c10c1b2741b4193a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group/sg-01bfc2ee35e050465",
            "description": "ECS-tasks-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ECS-tasks-Internet-over-HTTPS-(via-NAT)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-01bfc2ee35e050465",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ECS-Administrator-from-ALB-over-HTTP",
                "from_port": 7070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c10c1b2741b4193a"
                ],
                "self": false,
                "to_port": 7070
              },
              {
                "cidr_blocks": [],
                "description": "ECS-Requestor-from-ALB-over-HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c10c1b2741b4193a"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ECS-Worker-from-ALB-over-HTTP",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c10c1b2741b4193a"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "515275664907",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sg-01bfc2ee35e050465",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group/sg-08ab405a02826a65f",
            "description": "API-Gateway-VPC-Link-ENIs",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "VPC-Link-to-ALB-(HTTP)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c10c1b2741b4193a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-08ab405a02826a65f",
            "ingress": [],
            "name": "apigw-vpc-link-sg",
            "name_prefix": "",
            "owner_id": "515275664907",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sg-08ab405a02826a65f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:subnet/subnet-009f901160a01318d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009f901160a01318d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515275664907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "main-private-a"
            },
            "tags_all": {
              "Name": "main-private-a"
            },
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "subnet-009f901160a01318d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:subnet/subnet-058e4fd30e6017dcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058e4fd30e6017dcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515275664907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "main-private-b"
            },
            "tags_all": {
              "Name": "main-private-b"
            },
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "subnet-058e4fd30e6017dcb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:subnet/subnet-0bd4b2ad5693d274d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd4b2ad5693d274d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515275664907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "main-private-c"
            },
            "tags_all": {
              "Name": "main-private-c"
            },
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "subnet-0bd4b2ad5693d274d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:subnet/subnet-01fce6088d8ee29a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fce6088d8ee29a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515275664907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "main-public-a"
            },
            "tags_all": {
              "Name": "main-public-a"
            },
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "subnet-01fce6088d8ee29a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:subnet/subnet-0b6fe1c176e37bba3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6fe1c176e37bba3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515275664907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "main-public-b"
            },
            "tags_all": {
              "Name": "main-public-b"
            },
            "vpc_id": "vpc-06808daeb6db5b040"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "subnet-0b6fe1c176e37bba3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:vpc/vpc-06808daeb6db5b040",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d44273618f5e392b",
            "default_route_table_id": "rtb-05c7c7a3992b42ba9",
            "default_security_group_id": "sg-005643821d9019fe2",
            "dhcp_options_id": "dopt-040b1617d6ffc38cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06808daeb6db5b040",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c7c7a3992b42ba9",
            "owner_id": "515275664907",
            "region": "us-east-1",
            "tags": {
              "Name": "my-test-vpc"
            },
            "tags_all": {
              "Name": "my-test-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_ecs_per_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Administrator",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-0df21d0c5dfb54af0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB-to-ECS-Administrator-over-HTTP",
            "from_port": 7070,
            "id": "sgr-0df21d0c5dfb54af0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01bfc2ee35e050465",
            "region": "us-east-1",
            "security_group_id": "sg-0c10c1b2741b4193a",
            "security_group_rule_id": "sgr-0df21d0c5dfb54af0",
            "tags": null,
            "tags_all": {},
            "to_port": 7070
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-0df21d0c5dfb54af0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_tasks_sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Requestor",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-0743346c031ce9408",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB-to-ECS-Requestor-over-HTTP",
            "from_port": 8080,
            "id": "sgr-0743346c031ce9408",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01bfc2ee35e050465",
            "region": "us-east-1",
            "security_group_id": "sg-0c10c1b2741b4193a",
            "security_group_rule_id": "sgr-0743346c031ce9408",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-0743346c031ce9408",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_tasks_sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Worker",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-08679259a4b2cfa18",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB-to-ECS-Worker-over-HTTP",
            "from_port": 9090,
            "id": "sgr-08679259a4b2cfa18",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01bfc2ee35e050465",
            "region": "us-east-1",
            "security_group_id": "sg-0c10c1b2741b4193a",
            "security_group_rule_id": "sgr-08679259a4b2cfa18",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-08679259a4b2cfa18",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_tasks_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_https_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-01bfd9710cc6d9a7d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "ECS-tasks-Internet-over-HTTPS-(via-NAT)",
            "from_port": 443,
            "id": "sgr-01bfd9710cc6d9a7d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01bfc2ee35e050465",
            "security_group_rule_id": "sgr-01bfd9710cc6d9a7d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-01bfd9710cc6d9a7d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ecs_tasks_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpclink_to_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-02cc2a2cbe2e7a5db",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "VPC-Link-to-ALB-(HTTP)",
            "from_port": 80,
            "id": "sgr-02cc2a2cbe2e7a5db",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c10c1b2741b4193a",
            "region": "us-east-1",
            "security_group_id": "sg-08ab405a02826a65f",
            "security_group_rule_id": "sgr-02cc2a2cbe2e7a5db",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-02cc2a2cbe2e7a5db",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.vpc_link_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_from_vpclink_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-0d85d44bcda3d7d47",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "API-GW-VPC-Link-to-ALB-(HTTP)",
            "from_port": 80,
            "id": "sgr-0d85d44bcda3d7d47",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08ab405a02826a65f",
            "region": "us-east-1",
            "security_group_id": "sg-0c10c1b2741b4193a",
            "security_group_rule_id": "sgr-0d85d44bcda3d7d47",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-0d85d44bcda3d7d47",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.vpc_link_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_from_alb_per_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Administrator",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-09c0021f181a324cf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ECS-Administrator-from-ALB-over-HTTP",
            "from_port": 7070,
            "id": "sgr-09c0021f181a324cf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c10c1b2741b4193a",
            "region": "us-east-1",
            "security_group_id": "sg-01bfc2ee35e050465",
            "security_group_rule_id": "sgr-09c0021f181a324cf",
            "tags": null,
            "tags_all": {},
            "to_port": 7070
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-09c0021f181a324cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_tasks_sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Requestor",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-0754d11a3b176a564",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ECS-Requestor-from-ALB-over-HTTP",
            "from_port": 8080,
            "id": "sgr-0754d11a3b176a564",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c10c1b2741b4193a",
            "region": "us-east-1",
            "security_group_id": "sg-01bfc2ee35e050465",
            "security_group_rule_id": "sgr-0754d11a3b176a564",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-0754d11a3b176a564",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_tasks_sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Worker",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515275664907:security-group-rule/sgr-06e1523fb3ae469ec",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ECS-Worker-from-ALB-over-HTTP",
            "from_port": 9090,
            "id": "sgr-06e1523fb3ae469ec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c10c1b2741b4193a",
            "region": "us-east-1",
            "security_group_id": "sg-01bfc2ee35e050465",
            "security_group_rule_id": "sgr-06e1523fb3ae469ec",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515275664907",
            "id": "sgr-06e1523fb3ae469ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_tasks_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}